code/empty_vol.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vol
  labels:
    env: vol

spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx2
        image: nginx
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/
          name: test-nginx-vol
      volumes:
      - name: test-nginx-vol
        emptyDir: {}
