code/host_vol.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host-vol
  labels:
    env: test

spec:
  selector:
    matchLabels:
      app: http
  template:
    metadata:
      name: temp
      labels:
        app: http
    spec:
      containers:
      - name: http1
        image: httpd
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/local/apache2/htdocs
          name: test-http-vol
      volumes:
      - name: test-http-vol
        hostPath:
          path: /http
          type: DirectoryOrCreate
