code/mysql+wordpress.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: dep-mysql
  labels:
    app: mysql

spec:
  containers:
  - name: mysql
    image: mysql:5.7
    imagePullPolicy: Never
    ports:
    - containerPort: 3306
---
apiVersion: v1
kind: Pod
metadata:
  name: word-rep
  labels:
    app: word

spec:
  containers:
  - name: word
    image: wordpress
    ports:
    - containerPort: 80
