code/nginx+mysql.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: app-nginx

spec:
  containers:
  - name: nginx
    image: nginx:1.14
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
  - name: mysql
    image: mysql:5.7
    imagePullPolicy: Never
    ports:
    - containerPort: 3306
