code/nginx-pv-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pv-test
  labels:
    env: test
spec:
  volumes:
  - name: nginx-pvc
    persistentVolumeClaim:
      claimName: pvc
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: "/usr/share/nginx/html"
      name: nginx-pvc
