code/autoscale.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-auto
  labels:
    app: auto

spec:
  selector:
    matchLabels:
      app: auto
  template:
    metadata:
      labels:
        app: auto
    spec:
      containers:
      - name: a1
        image: registry.k8s.io/hpa-example
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 300m
          requests:
            cpu: 200m

---
apiVersion: v1
kind: Service
metadata:
  name: svc
  labels:
    run: svc

spec:
  ports:
  - port: 80
  selector:
    app: auto
