code/ingress-svc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-nginx1
  labels:
    app: nginx
  namespace: ingress-nginx

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: temp
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx1
          image: nginx
          imagePullPolicy: Never
          ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: svc1

spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-nginx2
  labels:
    app: nginx
  namespace: ingress-nginx

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      name: temp
      labels:
        app: nginx2

    spec:
      containers:
        - name: nginx2
          image: nginx
          imagePullPolicy: Never
          ports:
          - containerPort: 80

---
---
apiVersion: v1
kind: Service
metadata:
  name: svc2

spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx2
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-nginx3
  labels:
    app: nginx3
  namespace: ingress-nginx

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx3
  template:
    metadata:
      name: temp
      labels:
        app: nginx3

    spec:
      containers:
        - name: nginx3
          image: nginx
          imagePullPolicy: Never
          ports:
          - containerPort: 80
---
---
apiVersion: v1
kind: Service
metadata:
  name: svc3

spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx3
