code/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc1
            port:
              number: 80
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: svc2
            port:
              number: 80
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: svc3
            port:
              number: 80
